--- a/src/components/Users/UserHeader/UserHeader.css
+++ b/src/components/Users/UserHeader/UserHeader.css
@@ -3,7 +3,7 @@
 .user-topbar {
     background: var(--user-primary-green);
     border-bottom: 1px solid var(--user-border-color);
-    padding: 1rem 2rem;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,6 +12,7 @@
     z-index: 100;
     box-shadow: var(--user-shadow-lg);
     min-height: 70px;
+    width: 100%;
   }
   
   .user-mobile-menu-btn {
