--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,15 @@
     box-sizing: border-box;
 }
 
-
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid var(--must-green);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  box-shadow: 0 2px 10px var(--must-green-dark);
+}
 .loading-container {
   display: flex;
   justify-content: center;
