--- a/src/components/LandingPageComponents/LandingPageFooter/LandingPageFooter.css
+++ b/src/components/LandingPageComponents/LandingPageFooter/LandingPageFooter.css
@@ -12,12 +12,22 @@
     text-align: center;
   }
   
-  .footer-logo {
+  .footer-logo  {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1rem;
     margin-bottom: 2rem;
+  }
+  .logo-img img{
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border-radius: 50%;
   }
   
   .footer-text {
